--- a/Lab5/css/style.css
+++ b/Lab5/css/style.css
@@ -47,3 +47,16 @@ body, input, button{
     color: red;
     border: solid 1px red;
 }
+
+.myTable{
+    border: solid 1px black;
+    border-spacing: 0;
+    text-align: center;
+}
+
+
+
+.myTable td{
+    border: 1px solid black;
+    padding: 0.5em;
+}
